<resources>
    <string name="app_name">MovieDB</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="content_main_fragment">Fragment hien thi dau tien khi vao ung dung</string>
    <string name="username">trungnguyen</string>
    <string name="account">Account</string>
    <string name="movie">Movie</string>
    <string name="genres">Genres</string>
    <string name="company">Company</string>
    <string name="collection">Collection</string>
    <string name="about">About</string>
    <string name="search">Search</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="see_more">See more >></string>
    <string name="account_username">Username : </string>
    <string name="account_name">Name : </string>
    <string name="account_include_adult">Include Adult : </string>
    <string name="account_id">Id : </string>
    <string name="account_iso_6391">ISO-639-1 : </string>
    <string name="account_iso_31661">ISO-3166-1 : </string>
    <string name="account_favorite_movies">Favorite Movies</string>
    <string name="account_rated_movies">Rated Movies</string>
    <string name="account_watched_movies">Watched Movies</string>
    <string name="company_detail">Detail</string>
    <string name="company_description">Description : </string>
    <string name="company_headquarters">Headquarters : </string>
    <string name="company_homepage">Homepage : </string>
    <string name="company_logo">Logo : </string>
    <string name="company_movies">Movies : </string>
    <string name="company_parent">Parent Company : </string>
    <string name="company_error">Khong co thong tin!</string>
    <string name="home">Home</string>
    <string name="error_data">Khong co du lieu!</string>
    <string name="error_load">Khong the lay duoc du lieu!</string>
    <string name="movie_vote_count">Lượt xem:   </string>
    <string name="movie_vote_average">Đánh giá:   </string>
    <string name="text_vote_count">Lượt xem:\u0020</string>
    <string name="text_vote_average">Đánh giá:\u0020</string>
    <string name="text_vote_count_detail">Vote count:\u0020</string>
    <string name="text_vote_average_detail">Vote average:\u0020</string>
    <string name="text_release_date_detail">Release date:\u0020</string>
    <string name="text_runtime_detail">Runtime:\u0020</string>
    <string name="text_populary_detail">Populary:\u0020</string>
    <string name="text_overview_detail">Overview:\u0020</string>
    <string name="account_detail_id">ID:\u0020</string>
    <string name="account_detail_name">Name:\u0020</string>
    <string name="account_detail_country">Country:\u0020</string>
    <string name="account_detail_username">Username:\u0020</string>
    <string name="account_text_your_profile">Your profile</string>
</resources>
